// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should not render without crumbs 1`] = `<DocumentFragment />`;

exports[`Breadcrumbs should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center space-x-2 px-20 py-5 font-semibold bg-theme-neutral-contrast text-theme-neutral-dark"
    data-testid="breadcrumbs__wrapper"
  >
    <div
      class="sc-AxirZ hVzDKK"
      height="10"
      width="19"
    >
      <svg>
        arrow-back.svg
      </svg>
    </div>
    <div
      class="space-x-2"
    >
      <a
        class="text-theme-neutral-dark"
        href="/dashboard"
      >
        <span>
          Dashboard
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs should render with custom classes 1`] = `
<DocumentFragment>
  <div
    class="flex items-center space-x-2 class-name text-theme-neutral"
    data-testid="breadcrumbs__wrapper"
  >
    <div
      class="sc-AxirZ hVzDKK"
      height="10"
      width="19"
    >
      <svg>
        arrow-back.svg
      </svg>
    </div>
    <div
      class="space-x-2"
    >
      <a
        class=""
        href="/wallets"
      >
        <span>
          Wallets
        </span>
      </a>
      <span>
        <div
          class="sc-AxjAm jsQKzL border-1 border-theme-neutral"
          type="vertical"
        />
      </span>
    </div>
    <div
      class="space-x-2"
    >
      <a
        class="text-theme-neutral-dark"
        href="/wallets/my_wallet"
      >
        <span>
          My Wallet
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
